Unreviewed libpas build fix for PlayStation. https://bugs.webkit.org/show_bug.cgi?id=239834

* libpas/src/libpas/pas_random.h:
(pas_get_random):
Temporarily disable path on PlayStation.

Canonical link: https://commits.webkit.org/250069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293549 268f45cc-cd09-0410-ab3c-d52691b4dbfc